# MultiUp-Direct

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/constants/: about.rs  help.rs
src/functions/: download.rs  filter.rs  hosts.rs  login.rs  mod.rs  upload.rs
src/modules/: api.rs  app.rs  debrid.rs  download (v1).rs  download.rs  extract.rs  filter.rs  general.rs  help (v1).rs  help.rs  links.rs  login.rs  main (v1).rs  main.rs  mod.rs  server.rs  upload.rs
src/structs/: download (v1).rs  download.rs  filter.rs  help.rs  hosts.rs  login.rs  main.rs  mod.rs  settings.rs  upload.rs
