[package]
name = "MultiUp_Direct_2_6_1"
version = "2.6.1"
authors = ["Redpoint"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
#debug = true


[dependencies]
async-recursion = { version = "1.0.5" }
crossbeam-channel = { version = "0.5.8" }
eframe = { version = "0.23.0" }
egui_extras = { version = "0.23.0" }
futures = { version = "0.3.29" }
reqwest = { version = "0.11.22", features = ["json"] }
regex = { version = "1.10.2" }
scraper = { version = "0.18.1" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10" }
webbrowser = { version = "0.8.12" }


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false