[package]
name = "MultiUp-Direct"
version = "3.2.0-beta.1"
authors = ["Redpoint"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
#debug = true


[dependencies]
async-recursion = { version = "1.0.5" }
crossbeam-channel = { version = "0.5.11" }
eframe = { version = "0.26.2" }
egui_extras = { version = "0.26.2" }
egui_file = "0.16.1"
egui-toast = { version = "0.12.1" }
futures = { version = "0.3.29" }
reqwest = { version = "0.11.22", features = ["json", "multipart", "stream"] }
regex = { version = "1.10.2" }
scraper = { version = "0.18.1" }
self_update = "0.39.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10" }
webbrowser = { version = "0.8.12" }


#[dev-dependencies]
#criterion = "0.5.1"
#
#[[bench]]
#name = "benchmark"
#harness = false